Added contact page.

--- a/www/PyAlgoTrade.rwsw/Pages/3-Contact/Data/Contents.plist
+++ b/www/PyAlgoTrade.rwsw/Pages/3-Contact/Data/Contents.plist
@@ -7,20 +7,18 @@
 		<dict>
 			<key>Dictionary</key>
 			<dict>
-				<key>HomePage</key>
-				<string>1-Home</string>
+				<key>ApplyThemeToPage</key>
+				<true/>
 			</dict>
 			<key>Files</key>
-			<array/>
-			<key>Subsandwiches</key>
 			<array>
-				<string>1-Home</string>
-				<string>2-Downloads</string>
-				<string>3-Contact</string>
+				<string>Contents.html</string>
 			</array>
+			<key>Subsandwiches</key>
+			<array/>
 		</dict>
 	</array>
 	<key>Type</key>
-	<string>Pages</string>
+	<string>RapidWeaver HTML Code Data</string>
 </dict>
 </plist>
