--- a/www/PyAlgoTrade.rwsw/Pages/3-Contact/Contents.plist
+++ b/www/PyAlgoTrade.rwsw/Pages/3-Contact/Contents.plist
@@ -22,6 +22,8 @@
 					<key>Name</key>
 					<string>HTML Code</string>
 				</dict>
+				<key>PublishingManifest</key>
+				<dict/>
 			</dict>
 			<key>Files</key>
 			<array/>
