--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 recursive-include googleappengine *
 prune googleappengine/app/pyalgotrade
-global-exclude .DS_Store
+global-exclude .DS_Store *.pyc *.pyo
