--- a/www/PyAlgoTrade.rwsw/Contents.plist
+++ b/www/PyAlgoTrade.rwsw/Contents.plist
@@ -43,7 +43,7 @@
 				YW1lo0FCQ11OU011dGFibGVEYXRhVk5TRGF0YVhOU09i
 				amVjdNI+P0VGokZDV0JEQWxpYXNfECRFQTc3MDkwNi05
 				RTUyLTRENkYtQkNCQS1GM0VFRUM4RkVBNEFedHV0b3Jp
-				YWwtNS5wbmfSDUpLTFdOUy50aW1lgAwjQbWaomCNHwzS
+				YWwtNS5wbmfSDUpLTFdOUy50aW1lgAwjQbWb8n/pgkXS
 				Pj9OT6JPQ1ZOU0RhdGXSPj9RUqJSQ15SV1NpdGVSZXNv
 				dXJjZdI+P1RVo1VWQ1xOU011dGFibGVTZXRVTlNTZXTT
 				DVgOWVpcV05TLmtleXOAEKEtgAmhIoAE0j4/X2CjYGFD
@@ -84,7 +84,7 @@
 					<key>CopyrightTextUsed</key>
 					<true/>
 					<key>CruftlessLinksEnabled</key>
-					<false/>
+					<true/>
 					<key>DefaultExportPath</key>
 					<string>/Users/gabo/Devel-new/pyalgotrade-gh-pages</string>
 					<key>DirectoryIndexFilenames</key>
