--- a/googleappengine/app/queue.yaml
+++ b/googleappengine/app/queue.yaml
@@ -1,12 +1,12 @@
 queue:
-- name: se-producer-queue
+- name: mastertask-queue
   max_concurrent_requests: 1
   rate: 1/s
 
-- name: se-consumer-queue
+- name: workertask-queue
   rate: 5/s
 
-- name: se-result-queue
+- name: resulttask-queue
   max_concurrent_requests: 1
   rate: 1/s
 
