Improving Google App Engine task execution.

--- a/googleappengine/app/queue.yaml
+++ b/googleappengine/app/queue.yaml
@@ -1,14 +1,10 @@
 queue:
 # DON'T CHANGE MAX_CONCURRENT_REQUESTS FOR THIS QUEUE.
-- name: mastertask-queue
+- name: serial-queue
   max_concurrent_requests: 1
-  rate: 1/s
+  rate: 5/s
 
-- name: workertask-queue
-  rate: 1/s
-
-# DON'T CHANGE MAX_CONCURRENT_REQUESTS FOR THIS QUEUE.
-- name: resulttask-queue
-  max_concurrent_requests: 1
-  rate: 1/s
+- name: parallel-queue
+  max_concurrent_requests: 10
+  rate: 5/s
 
