--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,12 @@
 verbosity=2
 detailed-errors=1
 nocapture=1
-# with-coverage=1
-# cover-html=1
-# cover-erase=1
-# cover-package=pyalgotrade
+
+# Code coverage settings using nose-cov instead of the builtin plugin because:
+# 1: It tracks down subprocesses
+# 2: It supports coverage config files
+
+# cov=pyalgotrade
+# with-cov=1
+# cov-report=html
+# cov-config=coverage.cfg
