--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
 # command to install dependencies
 install:
   - "pip install ."
-  - "pip install -r requirements-test.txt"
+  - "pip install -r travis/requirements.txt"
 
 # command to run tests
-script: nosetests
+# optimizer_testcase is ignored because it gets blocked in Travis.
+script: nosetests --ignore-files=optimizer_testcase
