--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ install:
 
 # command to run tests
 # optimizer_testcase is ignored because it gets blocked in Travis.
-script: nosetests --ignore-files=optimizer_testcase
+# twitter_test is ignored because it requires credentials.
+# talib_test is ignored until I get it to work on Travis.
+# plotter_test is ignored until I get it to work on Travis.
+script: nosetests --ignore-files=optimizer_testcase --ignore-files=twitter_test --ignore-files=talib_test  --ignore-files=plotter_test
