--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: python
 python:
   - "2.7"
 
+before_install:
+  - sudo apt-get install gfortran
+
 # command to install dependencies
 install:
-  - "pip install ."
-  - "pip install --allow-external=TA-Lib --allow-unverified=TA-Lib -r travis/requirements.txt"
+  - pip install .
+  - pip install --allow-external=TA-Lib --allow-unverified=TA-Lib -r travis/requirements.txt
 
 # command to run tests
 # optimizer_testcase is ignored because it gets blocked in Travis.
