--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 
 # Not installing scipy with pip because it takes a very long time.
 before_install:
+  - sudo apt-get install gfortran libopenblas-dev liblapack-dev
   - sudo apt-get install python-scipy
 
 # command to install dependencies
