--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ before_install:
 # command to install dependencies
 # pip install scipy takes a lot of time and generates a lot of output. I want to get some output printed
 # just to avoid the job from getting stopped.
+# 
+# Check https://github.com/statsmodels/statsmodels/issues/2184 for scipy=0.14
 install:
-  - pip install scipy | awk 'NR % 250 == 0'
+  - pip install scipy=0.14 | awk 'NR % 250 == 0'
   - pip install .
   - pip install --allow-external=TA-Lib --allow-unverified=TA-Lib -r travis/requirements.txt
 
