--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_install:
 # 
 # Check https://github.com/statsmodels/statsmodels/issues/2184 for scipy==0.14
 install:
-  - pip install scipy==0.14 | awk 'NR % 250 == 0'
+#  - pip install scipy==0.14 | awk 'NR % 250 == 0'
+  - pip install scipy==0.14
   - pip list
   - pip install .
   - pip install --allow-external=TA-Lib --allow-unverified=TA-Lib -r travis/requirements.txt
