--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - sudo pip install pandas
   - sudo pip install patsy
   - sudo pip install --allow-external=TA-Lib --allow-unverified=TA-Lib -r travis/requirements.txt
+  - sudo pip install coveralls
 
 install:
   - pip list
@@ -21,4 +22,8 @@ install:
 # optimizer_testcase is ignored because it gets blocked in Travis.
 # twitter_test is ignored because it requires credentials.
 # talib_test is ignored until I get it to work on Travis.
-script: nosetests --ignore-files=optimizer_testcase --ignore-files=twitter_test --ignore-files=talib_test
+script:
+  - nosetests --ignore-files=optimizer_testcase --ignore-files=twitter_test --ignore-files=talib_test --with-coverage --cover-package=pyalgotrade
+
+after_success:
+  - coveralls
