--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -1,4 +1,4 @@
-FROM pyalgotrade:0.17
+FROM gbecedillas/pyalgotrade:0.17
 MAINTAINER Gabriel Martin Becedillas Ruiz <gabriel.becedillas@gmail.com>
 
 RUN pip install nose
