Work in progress on dockerized builds on Travis.

--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -8,5 +8,5 @@ RUN mkdir /tmp/testcases
 COPY travis/run_tests.sh /tmp/testcases/
 COPY coverage.cfg /tmp/testcases/
 COPY setup.cfg /tmp/testcases/
-COPY testcases /tmp/testcases/
-COPY samples /tmp/testcases/
+COPY testcases /tmp/testcases
+COPY samples /tmp/testcases
