--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ before_install:
   - docker build -t testcases .
 
 script:
-# TODO: Pass TWITTER_CONSUMER_KEY, TWITTER_CONSUMER_SECRET, TWITTER_ACCESS_TOKEN and TWITTER_ACCESS_TOKEN_SECRET to docker.
-  - docker run --name testcases testcases /bin/bash -c "cd /tmp/testcases; ./run_tests.sh"
+  - docker run --name testcases --env TWITTER_CONSUMER_KEY=$TWITTER_CONSUMER_KEY --env TWITTER_CONSUMER_SECRET=$TWITTER_CONSUMER_SECRET --env TWITTER_ACCESS_TOKEN=$TWITTER_ACCESS_TOKEN --env TWITTER_ACCESS_TOKEN_SECRET=$TWITTER_ACCESS_TOKEN_SECRET testcases /bin/bash -c "cd /tmp/testcases; ./run_tests.sh"
 
 # after_success:
 #   - coveralls
