Fixed docker image building

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update
 
 RUN apt-get install -y build-essential
 RUN apt-get install -y python-setuptools python-dev
-RUN easy_install pip
+RUN apt-get install -y python-pip
 
 RUN apt-get install -y gfortran libopenblas-dev liblapack-dev
 RUN apt-get install -y pkg-config
