--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@ doc/_build
 .ipynb_checkpoints
 .ropeproject
 
-venv
-data
-dist
-build
-PyAlgoTrade.egg-info
+/venv
+/data
+/dist
+/build
+/PyAlgoTrade.egg-info
+/notebooks
 
-testcases/twitter_credentials.py
+/testcases/credentials.py
