Start updating packages in docker image.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest
 MAINTAINER Gabriel Martin Becedillas Ruiz <gabriel.becedillas@gmail.com>
 
-RUN apt-get update
+RUN apt-get update; apt-get upgrade -y 
 
 RUN apt-get install -y build-essential
 RUN apt-get install -y python-setuptools python-dev
