--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -1,6 +1,8 @@
 FROM gbecedillas/pyalgotrade:0.18
 MAINTAINER Gabriel Martin Becedillas Ruiz <gabriel.becedillas@gmail.com>
 
+RUN apt-get update
+
 RUN pip install nose
 RUN pip install nose-cov
 
