--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -5,6 +5,8 @@ RUN apt-get update
 
 RUN pip install nose
 RUN pip install nose-cov
+# Required by matplotlib
+RUN apt-get install -y python-tk 
 
 RUN pip list
 
