Updating python code to be python 3 compatabile and iterating on docker setup

--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -1,12 +1,11 @@
 FROM python:3.6
 MAINTAINER Gabriel Martin Becedillas Ruiz <gabriel.becedillas@gmail.com>
 
-RUN pip install nose nose-cov matplotlib
-
 WORKDIR /app
 
-COPY . /app/
+RUN pip install nose nose-cov matplotlib ws4py tornado
 
+COPY . /app/
 RUN pip install -U /app
 
 CMD ./travis/run_tests.sh
