Moving from nose to tox and pytest

--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -3,23 +3,22 @@ MAINTAINER Gabriel Martin Becedillas Ruiz <gabriel.becedillas@gmail.com>
 
 RUN apt-get update
 
-RUN pip install nose
-RUN pip install nose-cov
+RUN pip install tox
 # Required by matplotlib
 RUN apt-get install -y python-tk 
 
-RUN pip list
+RUN pip freeze
 
 RUN mkdir /tmp/pyalgotrade
 
 # Files needed to execute testcases.
+COPY setup.py /tmp/pyalgotrade/
 COPY travis/run_tests.sh /tmp/pyalgotrade/
 COPY coverage.cfg /tmp/pyalgotrade/
-COPY setup.cfg /tmp/pyalgotrade/
+COPY tox.ini /tmp/pyalgotrade/
+COPY pyalgotrade /tmp/pyalgotrade/pyalgotrade
 COPY testcases /tmp/pyalgotrade/testcases
 COPY samples /tmp/pyalgotrade/samples
 
-# We need to upgrade the installed version with the one checked out from GIT.
-COPY setup.py /tmp/pyalgotrade/
-COPY pyalgotrade /tmp/pyalgotrade/pyalgotrade
-RUN pip install -U /tmp/pyalgotrade
+# Remove the install version of PyAlgoTrade since we'll be executing testcases from source.
+RUN pip uninstall -y pyalgotrade
