Added missing statements to forward certain environment variables.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py27
 [testenv]
 # Disabling hash randomization to get deterministic dict prints
 setenv = PYTHONHASHSEED=0
+passenv = TWITTER_CONSUMER_KEY TWITTER_CONSUMER_SECRET TWITTER_ACCESS_TOKEN TWITTER_ACCESS_TOKEN_SECRET QUANDL_API_KEY
 extras =
 	TALib
 deps = 
