--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = py27
-# envlist = py37
+envlist = py27,py37
 
 [testenv]
 # Disabling hash randomization to get deterministic dict prints
@@ -11,5 +10,9 @@ extras =
 deps = 
 	pytest
 	pytest-cov
-	statsmodels
-commands = py.test -v --cov=pyalgotrade --cov-config=coverage.cfg --cov-report=term-missing testcases/
+	numpy
+
+commands =
+# We need to install statsmodels in a separate pip call after numpy is installed. Check https://github.com/tox-dev/tox/issues/42
+	pip install --no-cache-dir statsmodels
+	py.test -v --cov=pyalgotrade --cov-config=coverage.cfg --cov-report=term-missing testcases/
