Fixed quandl testcases

--- a/tox.ini
+++ b/tox.ini
@@ -15,4 +15,4 @@ deps =
 commands =
 # We need to install statsmodels in a separate pip call after numpy is installed. Check https://github.com/tox-dev/tox/issues/42
 	pip install --no-cache-dir statsmodels
-	py.test -v --cov=pyalgotrade --cov-config=coverage.cfg --cov-report=term-missing testcases/
+	py.test -v --cov=pyalgotrade --cov-config=coverage.cfg --cov-report=term-missing --disable-warnings testcases/
