--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,21 +11,12 @@ RUN apt-get install -y python-pip
 RUN apt-get install -y gfortran libopenblas-dev liblapack-dev
 RUN apt-get install -y pkg-config
 RUN apt-get install -y wget
-
-RUN pip install numpy
-RUN pip install scipy
-RUN pip install pandas
-RUN pip install patsy
-RUN pip install statsmodels
-RUN apt-get install -y libfreetype6-dev; \
-	pip install matplotlib
-RUN pip install ws4py
-RUN pip install tornado
-RUN pip install tweepy
-RUN pip install cython
-RUN pip install retrying
+RUN apt-get install -y libfreetype6-dev
+# Required by matplotlib
+RUN apt-get install -y python-tk 
 
 # TA-Lib
+RUN pip install numpy
 RUN cd /tmp; \
 	wget http://sourceforge.net/projects/ta-lib/files/ta-lib/0.4.0/ta-lib-0.4.0-src.tar.gz; \
 	tar -xzf ta-lib-0.4.0-src.tar.gz; \
