--- a/tox.ini
+++ b/tox.ini
@@ -16,3 +16,11 @@ commands =
 # We need to install statsmodels in a separate pip call after numpy is installed. Check https://github.com/tox-dev/tox/issues/42
 	pip install --no-cache-dir statsmodels
 	py.test -v --cov=pyalgotrade --cov-config=coverage.cfg --cov-report=term-missing --disable-warnings testcases/
+
+[testenv:py27]
+commands =
+# We need to install statsmodels in a separate pip call after numpy is installed. Check https://github.com/tox-dev/tox/issues/42
+# Newer versions were failing on Python 2.7: ImportError: No module named abc
+	pip install --no-cache-dir statsmodels==0.10.0
+	py.test -v --cov=pyalgotrade --cov-config=coverage.cfg --cov-report=term-missing --disable-warnings testcases/
+
