--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ envlist = py27,py37
 
 [testenv]
 # Disabling hash randomization to get deterministic dict prints
-setenv = PYTHONHASHSEED=0
+setenv = 
+	PYTHONHASHSEED=0
+	TESTING=1
 passenv = TWITTER_CONSUMER_KEY TWITTER_CONSUMER_SECRET TWITTER_ACCESS_TOKEN TWITTER_ACCESS_TOKEN_SECRET QUANDL_API_KEY
 extras =
 	TALib
